RESOLVED FIXED42871
Cannot escape Id-value in SVG animation timing attributes
https://bugs.webkit.org/show_bug.cgi?id=42871
Summary Cannot escape Id-value in SVG animation timing attributes
pipian
Reported 2010-07-22 21:56:48 PDT
Created attachment 62381 [details] Test case The SVG spec states that <a href="http://www.w3.org/TR/SVG/animate.html#TimingAttributes">Id-values may be used as parts of certain kinds of timing values</a> on SVG animation elements (such as syncbase-values used for the begin and end attributes) and references the SMIL Animation spec for normativity. The SMIL Animation spec states that, as XML IDs are permitted to have the dot (.) separator, <a href="http://www.w3.org/TR/2001/REC-smil-animation-20010904/#TimingAttrValGrammars">identifiers may be escaped with the backslash</a>. Webkit currently does not support escaping dot characters in timing values, however. The attached file provides a simple example in which a filled path should slowly change from black to red over 3 seconds. A second animate element has been added to begin 3 seconds after the end of the first animation and should fade the fill back to black by referencing the first animation, whose ID has been properly escaped in the begin attribute. Batik correctly performs both animations. Webkit only performs the first. This should be a pretty quick fix in SVGSMILElement.cpp (SVGSMILElement::parseCondition).
Attachments
Test case (449 bytes, image/svg+xml)
2010-07-22 21:56 PDT, pipian
no flags
testcases (6.35 KB, text/html)
2026-04-01 19:35 PDT, Karl Dubost
no flags
Ahmad Saleem
Comment 1 2022-05-31 12:46:09 PDT
I am able to reproduce this bug in Safari 15.5 on macOS 12.4 and Technical Preview 146. It is also reproducible in Chrome Canary 104. Only in Firefox Nightly 102, the black box animation have second loop to go back to black after three seconds. Thanks!
Radar WebKit Bug Importer
Comment 2 2022-06-01 19:05:41 PDT
Ahmad Saleem
Comment 3 2022-06-14 17:08:50 PDT
Karl Dubost
Comment 4 2026-04-01 19:30:48 PDT
This is still reproducing. Chrome has the same issue. Firefox does it correctly.
Karl Dubost
Comment 5 2026-04-01 19:35:50 PDT
Created attachment 478901 [details] testcases This is still happening. More testcases.
Karl Dubost
Comment 6 2026-04-01 20:51:25 PDT
EWS
Comment 7 2026-04-08 17:14:06 PDT
Committed 310805@main (ba227e713a99): <https://commits.webkit.org/310805@main> Reviewed commits have been landed. Closing PR #61876 and removing active labels.
Karl Dubost
Comment 8 2026-04-08 17:29:16 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/59060
Note You need to log in before you can comment on or make changes to this bug.